# eight-bridge

./: Cargo.toml
.cargo/: config.toml
ridge-domain/: Cargo.toml
ridge-domain/src/: lib.rs  ridge_hero.rs  ridge_villains.rs  ridge_yatsuhashi.rs
ridge-domain/src/ridge_field/: tile.rs
ridge-domain/src/ridge_hero/: hero.rs
ridge-domain/src/ridge_villains/: timers.rs  villain_animation.rs  villains.rs
ridge-domain/src/ridge_yatsuhashi/: yatsuhashi.rs
ridge-service/: Cargo.toml
ridge-service/src/: const_parameter.rs  hero_usecase.rs  lib.rs  villains_usecase.rs  yatsuhashi_usecase.rs
ridge-service/src/hero_usecase/: create_hero.rs  operate_hero.rs
ridge-service/src/villains_usecase/: count_timer.rs  fire_yatsuhashi.rs  setup.rs  setup_villains.rs  ui.rs
ridge-service/src/yatsuhashi_usecase/: bond.rs  factory.rs  lightup.rs  migrate.rs  purge.rs
src/: main.rs
