[package]
name = "eight-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Yu Tokunaga"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
"ridge-service" ={ path = "./ridge-service/" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"
members = [".", "ridge-domain", "ridge-service"]

[profile.release]
opt-level = 'z'
